--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url" : "http://ilmente.com"
   }, { 
     "name" : "Riccardo Bevilacqua", 
-    "email" : "",
+    "email" : "bevilacqua.riccardo@gmail.com",
     "url" : ""
   }],
   "license": "MIT",
