--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "type": "git",
     "url": "git+https://ilmente@github.com/ilmente/tree-shaking-study.git"
   },
-  "contributors": [{ 
-    "name" : "Alessandro Bellini", 
-    "email" : "hello@ilmente.com",
-    "url" : "http://ilmente.com"
-  }, { 
-    "name" : "Riccardo Bevilacqua", 
-    "email" : "bevilacqua.riccardo@gmail.com",
-    "url" : ""
-  }],
+  "contributors": [
+    {
+      "name": "Alessandro Bellini",
+      "email": "hello@ilmente.com",
+      "url": "http://ilmente.com"
+    },
+    {
+      "name": "Riccardo Bevilacqua",
+      "email": "bevilacqua.riccardo@gmail.com",
+      "url": ""
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ilmente/tree-shaking-study/issues"
@@ -27,5 +30,8 @@
   "dependencies": {
     "esprima": "^3.1.3",
     "rxjs": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^7.0.22"
   }
 }
