--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "homepage": "https://github.com/ilmente/tree-shaking-study#readme",
   "dependencies": {
-    "esprima": "^3.1.3",
+    "babel-types": "^6.25.0",
+    "babylon": "^6.17.3",
     "rxjs": "^5.4.0"
   },
   "devDependencies": {
+    "@types/babylon": "^6.16.1",
     "@types/node": "^7.0.22"
   }
 }
