--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Javascript ES2015 tree shaking study",
   "main": "index.js",
   "scripts": {
-    "ilmente": "node ./src/experiments/ilmente/fn-01_2",
-    "analyze": "node ./dist/js/analyzer.js"
+    "analyze": "node ./dist/js/analyzer.js",
+    "ilmente": "node ./src/experiments/ilmente/test3"
   },
   "repository": {
     "type": "git",
