--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "babylon": "6.17.4",
     "chalk": "2.0.1",
     "debug": "2.6.8",
+    "escape-string-regexp": "^1.0.5",
     "jscodeshift": "0.3.32",
-    "rxjs": "5.4.0"
+    "rxjs": "5.4.2"
   },
   "devDependencies": {
     "@types/babylon": "6.16.1",
     "@types/node": "7.0.22",
     "iconv-lite": "0.4.18",
-    "typescript": "2.3.4"
+    "typescript": "2.4.1"
   }
 }
