--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chalk": "2.1.0",
     "debug": "2.6.8",
     "escape-string-regexp": "^1.0.5",
-    "jscodeshift": "./jscodeshift",
+    "jscodeshift": "git+https://git@github.com/ilmente/jscodeshift.git",
     "ramda": "^0.25.0",
     "recast": "0.13.0",
     "rxjs": "5.4.2",
