--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chalk": "2.1.0",
     "debug": "2.6.8",
     "escape-string-regexp": "1.0.5",
+    "estraverse": "^4.2.0",
     "jscodeshift": "git+https://git@github.com/ilmente/jscodeshift.git",
     "ramda": "0.25.0",
     "recast": "0.14.0",
