--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "ramda": "0.25.0",
     "recast": "0.14.0",
     "rxjs": "5.4.2",
-    "tslint": "5.9.1",
-    "uuid": "^3.2.1"
+    "tslint": "5.9.1"
   },
   "devDependencies": {
     "@types/acorn": "4.0.3",
