Added source map generation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "outDir": "dist",
         "module": "commonjs",
-        "target": "es2015"
+        "target": "es2015",
+        "sourceMap": true
     },
     "include": [
         "src/**/*.ts"
